create endpoints for character-appearance module
